# prop-firm-trading-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ecosystem.config.js  pyproject.toml  tech_spec.docx
.streamlit/: config.toml
alembic/: README  env.py
alembic/versions/: 1675f13299a7_add_strategy_performance_daily.py  32ee9a7d4dc6_add_strategy_heartbeats.py  89fecabef2a1_add_backtest_runs.py  e422ed7afe74_baseline_schema.py
docs/: DEPLOY.md
run/: _common.py  run_bb_btc_4h.py  run_bb_zscore_eurusd.py  run_gap_fill_spy.py  run_rsi2_spy.py  run_tiny_gap_es.py  run_vwap_sigma_es.py
scripts/: backtest.py  check_setup.py  fetch_news_calendar.py  init_db.py  nightly_analysis.py
scripts/deploy/: 01_bootstrap.sh  02_setup_app.sh  cron.sh  sync.sh
src/trading_bot/: __init__.py  config.py  indicators.py  main.py
src/trading_bot/brokers/: __init__.py  alpaca.py  balances.py  base.py  base_types.py  oanda.py  oanda_lumibot.py  tradovate.py
src/trading_bot/dashboard/: app.py  live_feeds.py
src/trading_bot/db/: __init__.py  models.py  session.py
src/trading_bot/learning/: __init__.py  attribution.py  culling.py  performance.py  post_mortem.py  regime.py
src/trading_bot/notifications/: __init__.py  dispatcher.py  email.py  telegram.py
src/trading_bot/orchestrator/: __init__.py  master.py
src/trading_bot/risk/: __init__.py  broker_pool.py  engine.py  rules.py
src/trading_bot/shared_state/: __init__.py  account_sync.py  coordinator.py
src/trading_bot/strategies/: __init__.py  base.py  bb_btc_4h.py  bb_zscore_eurusd.py  gap_fill_spy.py  rsi2_spy.py  tiny_gap_es.py  vwap_sigma_es.py
src/trading_bot/trade_log/: __init__.py  logger.py
tests/: test_broker_pool.py  test_indicators.py  test_learning.py  test_risk_engine.py
