[project]
name = "trading-bot"
version = "0.1.0"
description = "Automated prop firm trading system — 6 concurrent strategies across paper and funded accounts"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "APScheduler>=3.10",
    "httpx>=0.27",
    "websockets>=12.0",
    "alpaca-py>=0.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "pytz>=2024.1",
    "structlog>=24.1",
    "streamlit>=1.33",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]
backtest = [
    "vectorbt>=0.26",
    "backtrader>=1.9",
]
mt5 = [
    "MetaTrader5>=5.0",
]

[project.scripts]
trading-bot = "trading_bot.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
